package org.project.domain;

public enum Role {
    ADMINISTRATOR,
    REGULAR_USER,
    POWER_USER,
    ROOM_OWNER
}