@startuml
!pragma layout smetana
' Define classes and enumeration
class House {
  + Address: String
  + ZIPCode: String
  + GPSLocation: String
}

class Room {
  + Name: String
  + Floor: Integer
  + Dimensions: String
}

class DeviceType {
  + TypeName: String
  + Description: String
}

class Device {
  + Name: String
  + Type: DeviceType
  + Location: Room
}

class Sensor extends Device {
  + MeasurementType: String
}

class Actuator extends Device {
  + State: String
  + OutputValue: String
}

enum Role {
  Administrator
  RegularUser
  PowerUser
  RoomOwner
}

class User {
  + Username: String
  + Role: Role
}

class SmartHomeSystem {
  + configureHouseLocation(house: House, address: String, zip: String, location: String): void
  + addRoomToHouse(house: House, room: Room): void
  + listRooms(house: House): List<Room>
  + defineDeviceType(deviceType: DeviceType): void
  + addDeviceToRoom(room: Room, device: Device): void
}

' Define relationships
House "1" -- "0..*" Room
Room "1" -- "0..*" Device
Device "1" -- "1" DeviceType
Room "0..*" -- "0..*" User : has owners >
House "1" -- "*" User : has administrators >

' Define inheritance
Device <|-- Sensor
Device <|-- Actuator

@enduml